--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
             </div>
         </div>
     </div>
+    <div class="jumbo-nav">
+        <div class="container">
+            <div class="row">
+                <div class="col-6 col-sm-4 col-lg-2"></div>
+                <div class="col-6 col-sm-4 col-lg-2"></div>
+                <div class="col-6 col-sm-4 col-lg-2"></div>
+                <div class="col-6 col-sm-4 col-lg-2"></div>
+                <div class="col-6 col-sm-4 col-lg-2"></div>
+                <div class="col-6 col-sm-4 col-lg-2"></div>
+                
+            </div>
+        </div>
+    </div>
     <main></main>
     <footer></footer>
 </body>
