--- a/index.html
+++ b/index.html
@@ -27,20 +27,41 @@
             </div>
         </div>
     </div>
-    <div class="jumbo-nav">
+    <div class="jumbo-nav mt-4">
         <div class="container">
             <div class="row">
-                <div class="col-6 col-sm-4 col-lg-2"></div>
-                <div class="col-6 col-sm-4 col-lg-2"></div>
-                <div class="col-6 col-sm-4 col-lg-2"></div>
-                <div class="col-6 col-sm-4 col-lg-2"></div>
-                <div class="col-6 col-sm-4 col-lg-2"></div>
-                <div class="col-6 col-sm-4 col-lg-2"></div>
+                <div class="col-6 col-sm-4 col-lg-2">img</div>
+                <div class="col-6 col-sm-4 col-lg-2">img</div>
+                <div class="col-6 col-sm-4 col-lg-2">img</div>
+                <div class="col-6 col-sm-4 col-lg-2">img</div>
+                <div class="col-6 col-sm-4 col-lg-2">img</div>
+                <div class="col-6 col-sm-4 col-lg-2">img</div>
                 
             </div>
         </div>
     </div>
-    <main></main>
+    <main>
+        <section id="console-acsesory">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12"> text</div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12 col-md-6">text</div>
+                    <div class="col-12 col-md-6">img</div>
+                </div>
+
+                <div class="row">
+                    <div class="col-4 col-md-auto">img</div>
+                    <div class="col-4 col-md-auto">img</div>
+                    <div class="col-4 col-md-auto">img</div>
+                    <div class="col-4 col-md-auto">img</div>
+                    <div class="col-4 col-md-auto">img</div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
