--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div class="jumbotron">
         <div class="container h-100">
             <div class="row h-100 justify-content-end flex-lg-column">
-                <div class="col-12 col-lg-4"></div>
-                <div class="col-12 col-lg-4"></div>
-                <div class="col-12 col-lg-4"></div>
-                <div class="col-12"></div>
+                <div class="col-12 col-lg-4">img</div>
+                <div class="col-12 col-lg-4">text</div>
+                <div class="col-12 col-lg-4">text</div>
+                <div class="col-12">buton</div>
             </div>
         </div>
     </div>
@@ -61,6 +61,19 @@
                 </div>
             </div>
         </section>
+
+    <section id="sponsored-game">
+        <div class="jumbotron baner">
+            <div class="container h-100">
+                <div class="row h-100 justify-content-end flex-lg-column">
+                    <div class="col-12 col-lg-4">img</div>
+                    <div class="col-12 col-lg-4">text</div>
+                    <div class="col-12 col-lg-4">text</div>
+                    <div class="col-12">buton</div>
+                </div>
+            </div>
+        </div>
+    </section>        
     </main>
     <footer></footer>
 </body>
