new arivals section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         </div>
     </div>
     <main>
-        <section id="console-acsesory">
+        <!-- console and acsesory -->
+        <section id="console-acsesory" class="mt-4">
             <div class="container">
                 <div class="row">
                     <div class="col-12"> text</div>
@@ -61,8 +62,8 @@
                 </div>
             </div>
         </section>
-
-    <section id="sponsored-game">
+        <!-- sponsored game -->
+    <section id="sponsored-game" class="mt-4">
         <div class="jumbotron baner">
             <div class="container h-100">
                 <div class="row h-100 justify-content-end flex-lg-column">
@@ -73,7 +74,33 @@
                 </div>
             </div>
         </div>
-    </section>        
+    </section>
+    <!-- new arivals -->
+
+    <section id="new-arivals">
+        <div class="container">
+            <div class="row py-5">
+                <div class="col">title and subtitle</div>
+            </div>
+
+            <div class="row">
+                <div class="col-6 col-sm-4 col-lg-2">img+ text</div>
+                <div class="col-6 col-sm-4 col-lg-2">img+ text</div>
+                <div class="col-6 col-sm-4 col-lg-2">img+ text</div>
+                <div class="col-6 col-sm-4 col-lg-2">img+ text</div>
+                <div class="col-6 col-sm-4 col-lg-2">img+ text</div>
+                <div class="col-6 col-sm-4 col-lg-2">img+ text</div>
+                <div class="col-6 col-sm-4 col-lg-2">img+ text</div>
+                <div class="col-6 col-sm-4 col-lg-2">img+ text</div>
+                <div class="col-6 col-sm-4 col-lg-2">img+ text</div>
+                <div class="col-6 col-sm-4 col-lg-2">img+ text</div>
+                <div class="col-6 col-sm-4 col-lg-2">img+ text</div>
+                <div class="col-6 col-sm-4 col-lg-2">img+ text</div>
+                
+            </div>
+        </div>
+    </section>
+    
     </main>
     <footer></footer>
 </body>
