--- a/index.html
+++ b/index.html
@@ -100,6 +100,19 @@
             </div>
         </div>
     </section>
+    <!-- explore playstation -->
+
+<section id="explore-playstation" class="mt-4">
+    <div class="row">
+        <div class="col-12">title+paragraph</div>
+    </div>
+
+    <div class="row">
+        <div class="col-12 col-md-4"></div>
+        <div class="col-12 col-md-4"></div>
+        <div class="col-12 col-md-4"></div>
+    </div>
+</section>
     
     </main>
     <footer></footer>
