--- a/index.html
+++ b/index.html
@@ -199,6 +199,13 @@
 
             </div>
         </div>
+
+        <div class="footer-bottom container">
+            <div class="row pb-5">
+                <div class="col-12 col-lg-6">img + text</div>
+
+            </div>
+        </div>
     </footer>
 </body>
 </html>
