--- a/index.html
+++ b/index.html
@@ -89,11 +89,19 @@
     </header>
     <div class="jumbotron">
         <div class="container h-100">
-            <div class="row h-100 justify-content-end flex-lg-column">
-                <div class="col-12 col-lg-4">img</div>
-                <div class="col-12 col-lg-4">text</div>
-                <div class="col-12 col-lg-4">text</div>
-                <div class="col-12">buton</div>
+            <div class="row h-100 justify-content-end flex-column">
+                <div class="col-7 col-lg-4">
+                    <img src="img/returnal-hero-banner-logo.png" class="img-fluid" alt="">
+                </div>
+                <div class="col-7 col-lg-4 my-5">
+                    <h1>Rompi il cerchio</h1>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5</p>
+                </div>
+                <div class="col-6 py-4">
+                    <button type="button" class="btn btn-danger rounded-5">Acquista ora</button>
+                </div>
             </div>
         </div>
     </div>
