--- a/index.html
+++ b/index.html
@@ -108,12 +108,30 @@
     <div class="jumbo-nav mt-4">
         <div class="container">
             <div class="row">
-                <div class="col-6 col-sm-4 col-lg-2">img</div>
-                <div class="col-6 col-sm-4 col-lg-2">img</div>
-                <div class="col-6 col-sm-4 col-lg-2">img</div>
-                <div class="col-6 col-sm-4 col-lg-2">img</div>
-                <div class="col-6 col-sm-4 col-lg-2">img</div>
-                <div class="col-6 col-sm-4 col-lg-2">img</div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/returnal-listing-thumb-01-ps5.jpg" class="img-fluid rounded-3" alt="returnal">
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" class="img-fluid rounded-3" alt="ratchet-and-clank-rift-apart-keyart">
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/returnal-listing-thumb-01-ps5.jpg" class="img-fluid rounded-3" alt="returnal">
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" class="img-fluid rounded-3" alt="ratchet-and-clank-rift-apart-keyart">
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/returnal-listing-thumb-01-ps5.jpg" class="img-fluid rounded-3" alt="returnal">
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" class="img-fluid rounded-3" alt="ratchet-and-clank-rift-apart-keyart">
+                </div>
+               
                 
             </div>
         </div>
