Sponsor game added

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
               </nav>
         </div>
     </header>
+    <!-- jumbotron -->
     <div class="jumbotron">
         <div class="container h-100">
             <div class="row h-100 justify-content-end flex-column">
@@ -105,11 +106,12 @@
             </div>
         </div>
     </div>
+    <!-- jumbo nav -->
     <div class="jumbo-nav mt-4">
         <div class="container">
             <div class="row">
                 <div class="col-6 col-sm-4 col-lg-2">
-                    <img src="img/returnal-listing-thumb-01-ps5.jpg" class="img-fluid rounded-3" alt="returnal">
+                    <img src="img/returnal-listing-thumb-01-ps5.jpg" class="img-fluid rounded-3 img-thumbnail" alt="returnal">
                 </div>
 
                 <div class="col-6 col-sm-4 col-lg-2">
@@ -141,20 +143,39 @@
         <section id="console-acsesory" class="mt-4">
             <div class="container">
                 <div class="row">
-                    <div class="col-12"> text</div>
+                    <div class="col-12 text-center">
+                        <h6 class="text-primary">PLAY HAS NO LIMIT</h6>
+                        <h2>Ecco la PlayStation 5</h2>
+                        <span class="text-secondary">Tuffati in nuove possibilità di gioco completamente inaspettate</span>
+                    </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-12 col-md-6">text</div>
-                    <div class="col-12 col-md-6">img</div>
+                    <div class="col-12 col-md-6 mt-4">
+                        <h2>Console PlayStation 5</h2>
+                        <span class="text-secondary">Sperimenta la nuova generazione di incredibili ghiochi PlaiStation</span>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <img src="img/playstation-5-thumb.png" class="img-fluid" alt="playstation-5">
+                    </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-4 col-md-auto">img</div>
-                    <div class="col-4 col-md-auto">img</div>
-                    <div class="col-4 col-md-auto">img</div>
-                    <div class="col-4 col-md-auto">img</div>
-                    <div class="col-4 col-md-auto">img</div>
+                <div class="row row-cols-md-5">
+                    <div class="col-4">
+                        <img src="img/playstation-5-thumb.png"  class="img-fluid"  alt="playstation-5">
+                    </div>
+                    <div class="col-4">
+                        <img src="img/joypad-thumb.png" class="img-fluid" alt="joypad">
+                    </div>
+                    <div class="col-4">
+                        <img src="img/headset-thumb.png" class="img-fluid" alt="headset">
+                    </div>
+                    <div class="col-4">
+                        <img src="img/remote-thumb.png" class="img-fluid" alt="remote">
+                    </div>
+                    <div class="col-4">
+                        <img src="img/camera-thumb.jpg" class="img-fluid" alt="camera">
+                    </div>
                 </div>
             </div>
         </section>
@@ -162,11 +183,19 @@
             <section id="sponsored-game" class="mt-4">
                 <div class="jumbotron baner">
                     <div class="container h-100">
-                        <div class="row h-100 justify-content-end flex-lg-column">
-                            <div class="col-12 col-lg-4">img</div>
-                            <div class="col-12 col-lg-4">text</div>
-                            <div class="col-12 col-lg-4">text</div>
-                            <div class="col-12">buton</div>
+                        <div class="row h-100 justify-content-end flex-column">
+                            <div class="col-7 col-lg-2">
+                                <img src="img/it-takes-two-logo.png" class="img-fluid" alt="">
+                            </div>
+                            <div class="col-7 col-lg-3 my-4">
+                                <h1>Un'avventura cooperativa selvaggia ti attende</h1>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <p>Trova un amico e partite insieme per l'avventura piu folle delle vostre vite in It Takes Two. un gioco d'avventura cooperativita a piattaforme che stravolge il suo genere</p>
+                            </div>
+                            <div class="col-6 py-4">
+                                <button type="button" class="btn btn-danger rounded-5">Acquista ora</button>
+                            </div>
                         </div>
                     </div>
                 </div>
