added social media section

--- a/index.html
+++ b/index.html
@@ -427,18 +427,31 @@
 
         <section id="folow-on-social" class="mt-4">
             <div class="container">
+               <div class="row mb-4">
+                <div class="col-12 text-center">
+                    <h2>Seguici sui social media</h2>
+                </div>
+               </div>
                 <div class="row">
-                    <div class="col-6 col-md-3"></div>
-                    <div class="col-6 col-md-3"></div>
-                    <div class="col-6 col-md-3"></div>
-                    <div class="col-6 col-md-3"></div>
+                    <div class="col-6 col-sm-3">
+                        <img src="img/twitter.jpg" class="img-fluid" alt="twitter">
+                    </div>
+                    <div class="col-6 col-sm-3">
+                        <img src="img/facebook.jpg" class="img-fluid" alt="facebook">
+                    </div>
+                    <div class="col-6 col-sm-3">
+                        <img src="img/instagram.jpg" class="img-fluid mt-3 mt-sm-0" alt="instagram">
+                    </div>
+                    <div class="col-6 col-sm-3">
+                        <img src="img/youtube.png" class="img-fluid mt-3 mt-sm-0" alt="youtube">
+                    </div>
                 </div>
             </div>
         </section>
     </main>
 
     <!-- footer -->
-    <footer>
+    <footer class="mt-4">
 
         <!-- footer top -->
         <div class="footer-top container py-5">
