--- a/index.html
+++ b/index.html
@@ -456,27 +456,74 @@
         <!-- footer top -->
         <div class="footer-top container py-5">
             <div class="row">
-                <div class="col-12 col-lg-6">img</div>
+                <div class="col-12 col-lg-6 mb-3">
+                    <img src="img/ps-footer.svg" class="img-fluid" alt="PS logo">
+                    <div class="mt-3">
+                        <i class="fa-solid fa-globe me-2"></i>
+                        <span>Country / Region: Italy</span>
+
+                    </div>
+                </div>
                 <div class="col-12 col-md-4 col-lg-2">
-                    <ul>
+                    <ul class="list-unstyled mb-0">
                         <li>
-                            text * 5
+                            <a href="#">link footer n</a>
+                        </li>
+                        <li>
+                            <a href="#">link footer n</a>
+                        </li>
+                        <li>
+                            <a href="#">link footer n</a>
+                        </li>
+                        <li>
+                            <a href="#">link footer n</a>
+                        </li>
+                        <li>
+                            <a href="#">link footer n</a>
+                        </li>
+                        <li>
+                            <a href="#">link footer n</a>
                         </li>
                     </ul>
                 </div>
 
                 <div class="col-12 col-md-4 col-lg-2">
-                    <ul>
+                    <ul class="list-unstyled mb-0">
                         <li>
-                            text * 7
+                            <a href="#">link footer n</a>
                         </li>
+                        <li>
+                            <a href="#">link footer n</a>
+                        </li>
+                        <li>
+                            <a href="#">link footer n</a>
+                        </li>
+                        <li>
+                            <a href="#">link footer n</a>
+                        </li>
+                        <li>
+                            <a href="#">link footer n</a>
+                        </li>
+                        <li>
+                            <a href="#">link footer n</a>
+                        </li>
+                        <li>
+                            <a href="#">link footer n</a>
+                        </li>
+
                     </ul>
                 </div>
 
                 <div class="col-12 col-md-4 col-lg-2">
-                    <ul>
+                    <ul class="list-unstyled mb-0">
+                       <li>
+                            <a href="#">link footer n</a>
+                        </li>
                         <li>
-                            text * 3
+                            <a href="#">link footer n</a>
+                        </li>
+                        <li>
+                            <a href="#">link footer n</a>
                         </li>
                     </ul>
                 </div>
