added footer bottom

--- a/index.html
+++ b/index.html
@@ -533,7 +533,12 @@
         <!-- footer bottom -->
         <div class="footer-bottom container">
             <div class="row pb-5">
-                <div class="col-12 col-lg-6">img + text</div>
+                <div class="col-12 col-lg-6">
+                    <div class="w-25">
+                        <img src="img/sie-logo.svg" class="img-fluid" alt="sony logo">
+                    </div>
+                    <p>website <i class="fa-regular fa-copyright"></i>2021 Sony Interactive Entertainment europe limited. tutti i contenuti, nomi dei giochi, nomi dei commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. <a href="#" class="text-decoration-underline">Maggiori info</a></p>
+                </div>
 
             </div>
         </div>
