fix and btn efects

--- a/index.html
+++ b/index.html
@@ -430,20 +430,35 @@
                     <h2>Seguici sui social media</h2>
                 </div>
                </div>
-                <div class="row">
-                    <div class="col-6 col-sm-3">
-                        <img src="img/twitter.jpg" class="img-fluid" alt="twitter">
+               <div class="row gy-4">
+                    <div class="col-6 col-sm-2 offset-sm-2">
+                        <a href="#" class="d-block">
+                            <img src="img/twitter.jpg" class="img-fluid" alt="Twitter" >
+
+                        </a>
                     </div>
-                    <div class="col-6 col-sm-3">
-                        <img src="img/facebook.jpg" class="img-fluid" alt="facebook">
+
+                    <div class="col-6 col-sm-2">
+                        <a href="#" class="d-block">
+                            <img src="img/facebook.jpg" class="img-fluid" alt="Facebook" >
+
+                        </a>
                     </div>
-                    <div class="col-6 col-sm-3">
-                        <img src="img/instagram.jpg" class="img-fluid mt-3 mt-sm-0" alt="instagram">
+
+                    <div class="col-6 col-sm-2">
+                        <a href="#" class="d-block">
+
+                            <img src="img/instagram.jpg" class="img-fluid" alt="Instagram" >
+                        </a>
                     </div>
-                    <div class="col-6 col-sm-3">
-                        <img src="img/youtube.png" class="img-fluid mt-3 mt-sm-0" alt="youtube">
+
+                    <div class="col-6 col-sm-2">
+                        <a href="#" class="d-block">
+                            
+                            <img src="img/youtube.png" class="img-fluid" alt="Youtube" class="img-fluid">
+                        </a>
                     </div>
-                </div>
+              </div>
             </div>
         </section>
     </main>
