--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <!-- jumbo nav -->
     <div class="jumbo-nav mt-4">
         <div class="container">
-            <div class="row">
+            <div class="row games">
                 <div class="col-6 col-sm-4 col-lg-2">
                     <img src="img/returnal-listing-thumb-01-ps5.jpg" class="img-fluid rounded-3 img-thumbnail" alt="returnal">
                 </div>
@@ -156,24 +156,30 @@
                     </div>
                     <div class="col-12 col-md-6">
                         <img src="img/playstation-5-thumb.png" class="img-fluid" alt="playstation-5">
+                       
                     </div>
                 </div>
 
-                <div class="row row-cols-md-5">
+                <div class="row row-cols-md-5 text-center acsesory">
                     <div class="col-4">
                         <img src="img/playstation-5-thumb.png"  class="img-fluid"  alt="playstation-5">
+                        <h6 class="mt-2 d-sm-none d-md-block">Console PS5</h6>
                     </div>
                     <div class="col-4">
                         <img src="img/joypad-thumb.png" class="img-fluid" alt="joypad">
+                        <h6 class="d-sm-none d-md-block">Controller wireless Dualsense</h6>
                     </div>
                     <div class="col-4">
                         <img src="img/headset-thumb.png" class="img-fluid" alt="headset">
+                        <h6 class="mt-2 d-sm-none d-md-block">Cuffie wireless con microfono PULSE 3</h6>
                     </div>
                     <div class="col-4">
                         <img src="img/remote-thumb.png" class="img-fluid" alt="remote">
+                        <h6 class="mt-2 d-sm-none d-md-block">Telecomando Media</h6>
                     </div>
                     <div class="col-4">
                         <img src="img/camera-thumb.jpg" class="img-fluid" alt="camera">
+                        <h6 class="mt-2 d-sm-none d-md-block">Telecamera HD</h6>
                     </div>
                 </div>
             </div>
