--- a/index.html
+++ b/index.html
@@ -163,23 +163,23 @@
                 <div class="row row-cols-md-5 text-center acsesory">
                     <div class="col-4">
                         <img src="img/playstation-5-thumb.png"  class="img-fluid"  alt="playstation-5">
-                        <h6 class="mt-2 d-sm-none d-md-block">Console PS5</h6>
+                        <h6 class="mt-2 d-none d-md-block">Console PS5</h6>
                     </div>
                     <div class="col-4">
                         <img src="img/joypad-thumb.png" class="img-fluid" alt="joypad">
-                        <h6 class="d-sm-none d-md-block">Controller wireless Dualsense</h6>
+                        <h6 class="d-none d-md-block">Controller wireless Dualsense</h6>
                     </div>
                     <div class="col-4">
                         <img src="img/headset-thumb.png" class="img-fluid" alt="headset">
-                        <h6 class="mt-2 d-sm-none d-md-block">Cuffie wireless con microfono PULSE 3</h6>
+                        <h6 class="mt-2 d-none d-md-block">Cuffie wireless con microfono PULSE 3</h6>
                     </div>
                     <div class="col-4">
                         <img src="img/remote-thumb.png" class="img-fluid" alt="remote">
-                        <h6 class="mt-2 d-sm-none d-md-block">Telecomando Media</h6>
+                        <h6 class="mt-2 d-none d-md-block">Telecomando Media</h6>
                     </div>
                     <div class="col-4">
                         <img src="img/camera-thumb.jpg" class="img-fluid" alt="camera">
-                        <h6 class="mt-2 d-sm-none d-md-block">Telecamera HD</h6>
+                        <h6 class="mt-2 d-none d-md-block">Telecamera HD</h6>
                     </div>
                 </div>
             </div>
