fix btn console and acsesoryes

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="row">
                     <div class="col-12 col-md-6 mt-4">
                         <h2>Console PlayStation 5</h2>
-                        <span class="text-secondary">Sperimenta la nuova generazione di incredibili ghiochi PlaiStation</span>
+                        <span class="text-secondary d-block">Sperimenta la nuova generazione di incredibili ghiochi PlaiStation</span>
                         <button type="button" class="btn btn-primary rounded-5 mt-3">Maggiori informazioni</button>
                     </div>
                     <div class="col-12 col-md-6">
