--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="container">
             <div class="row games">
                 <div class="col-6 col-sm-4 col-lg-2">
-                    <img src="img/returnal-listing-thumb-01-ps5.jpg" class="img-fluid rounded-3 img-thumbnail" alt="returnal">
+                    <img src="img/returnal-listing-thumb-01-ps5.jpg" class="img-fluid rounded-3" alt="returnal">
                 </div>
 
                 <div class="col-6 col-sm-4 col-lg-2">
